# WEB_HW_10

./: pyproject.toml
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/: views.py
hw_project/quotes/templates/quotes/: base.html  index.html
hw_project/quotes/templatetags/: extract.py
hw_project/utils/: add_quotes_to_mongo.py
