[tool.poetry]
name = "hw-10"
version = "0.1.0"
description = ""
authors = ["Dmitriy Teplinskiy <99141331+MONSMIN@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hw_10"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
pymongo = "^4.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
